tests/interpreter/pass/307-tuple.hyg
let t: tuple {string, int} = tuple {"H", 4};
assert(t._2 = 4)
