tests/interpreter/fail/307-tuple.hyg
let t: tuple {int} = tuple {1};
assert(t._2 = 1)